# AndroidArabicWhisper

./: .gitignore  README.md  build.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/org/amr/arabicwhisper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Besmellah.m4a
app/src/main/cpp/: CMakeLists.txt  audio.cpp  feature_extractor.cpp  tokenizer.cpp  transcribe.cpp  utils.cpp  vad.cpp  whisper_jni.cpp  whisper_model.cpp
app/src/main/cpp/include/: audio.h  feature_extractor.h  tokenizer.h  utils.h  vad.h  whisper_model.h
app/src/main/java/org/amr/arabicwhisper/: FasterWhiser.kt  MainActivity.kt  WhisperHelper.kt
app/src/main/java/org/amr/arabicwhisper/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/python/: requirements.txt  whisper_helper.py
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/amr/arabicwhisper/: ExampleUnitTest.kt
faster-whisper/: README.md  load.py
gradle/wrapper/: gradle-wrapper.properties
